chore(pivotGrid): fix broken layout of pivot configurator

--- a/scss/pivotgrid/_layout.scss
+++ b/scss/pivotgrid/_layout.scss
@@ -136,12 +136,13 @@
 
         .k-columns {
             > div {
-                overflow: auto;
+                width: 50%;
+                float: left;
                 padding: $padding-x;
                 border-style: solid;
                 border-width: 0 0 0 1px;
-                float: left;
-                width: 45%;
+                overflow: auto;
+                box-sizing: border-box;
             }
 
             > div:first-child {
